tests/test-3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/greenfoot.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/bluejext2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/classgraph-4.8.90.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/xom-1.3.7.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.8.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/wellbehavedfx-0.3.3.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/f3/tn8t1byd7kx35jtq2lm57_b80000gn/T/AppTranslocation/C2077946-CCAE-480A-B3E7-8354890B2822/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/wiu/git/oracle-gf/Greenfoot/tests/test-3
-d
/Users/wiu/git/oracle-gf/Greenfoot/tests/test-3/doc
-encoding
UTF-8
-charset
UTF-8
/Users/wiu/git/oracle-gf/Greenfoot/tests/test-3/Guard.java
<---- end of javadoc command ---->
Loading source file /Users/wiu/git/oracle-gf/Greenfoot/tests/test-3/Guard.java...
/Users/wiu/git/oracle-gf/Greenfoot/tests/test-3/Guard.java:27: error: not a statement
            getWorld().show
                      ^
/Users/wiu/git/oracle-gf/Greenfoot/tests/test-3/Guard.java:27: error: ';' expected
            getWorld().show
                           ^
2 errors
